examples/test/testpolicy6514.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6514
  namespace: namespace31
spec:
  podSelector:
    matchLabels:
      key9: value29
      key13: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value22
          key6: value18
      podSelector:
        matchLabels:
          key47: value31
          key22: value14
          key36: value18
